Fix Overlapping Navigation

--- a/experiment/card.css
+++ b/experiment/card.css
@@ -24,7 +24,7 @@
     min-height: 100vh;
     max-width: 100%;
     
-    z-index: 9;
+    z-index: 100;
     
 }
 .back-btn{
